Made some tweaks to reduce duplication by allowing the controller to pass resource types data, which are based on database models, to the submit template.

--- a/app/views/submit.jade
+++ b/app/views/submit.jade
@@ -24,10 +24,9 @@ block content
         label(for='resourceType') Resource Type: 
         select.form-control(id='resourceType', name='type', required) 
           option(value="", selected, disabled) Select Type
-          option Character 
-          option Quest 
-          option Location 
-          option Item
+          for type in type_list
+            option #{type}
+          
 
         label(for='license') License: 
         select.form-control(id='license', name='license' required) 
