--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .container
-    form.form-signin(role='form', action="/register",method="post", style='max-width: 300px;')
+    form.form-signin(role='form', action="/users/register",method="post", style='max-width: 300px;')
       h2.form-signin-heading Sign Up here
       input.form-control(type='text', name="name", placeholder='Your Name')
       input.form-control(type='text', name="username", placeholder='Your Username')
