--- a/app/views/submit.jade
+++ b/app/views/submit.jade
@@ -11,9 +11,9 @@ block content
   if !user
     h3 You need to be logged in to submit content
     p
-      a(href='/login') Click here to login
+      a(href='/users/login') Click here to login
       span  or 
-      a(href='/register') here to register.
+      a(href='/users/register') here to register.
 
   else
 
