--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .container
-    form.form-signin(role='form', action='/login', method='post')
+    form.form-signin(role='form', action='/users/login', method='post')
       h2.form-signin-heading Please sign in
       label.sr-only(for='inputEmail')
       input.form-control(type='text', name='username', id='inputEmail', placeholder='Username', required, autofocus)
