--- a/app/views/submit.jade
+++ b/app/views/submit.jade
@@ -75,7 +75,7 @@ block content
             option Either
         
           label(for='characterDescription') Short Description: *
-          input.form-control(type='textarea', id='characterDescription', name='character[description]', required)
+          input.form-control(type='textarea', id='characterDescription', name='character[short_description]', required)
         
           label(for='characterLongDescription') Long Description: 
           input.form-control(type='textarea', id='characterLongDescription', name='character[long_description]')
