--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,25 +2,25 @@ extends layout
 
 block content
   h2 About
-  p Welcome to OpenGamePlot. Our gole it to provide a place to store open source characters, items, missions and general writtings that can be used in games. The sites main features are: 
-  ul 
+  p Welcome to OpenGamePlot. Our goal it to provide a place to store open source characters, items, missions and general writings that can be used in games. The sites main features are:
+  ul
     li Form: to guide content creators in uploading their content
     li Downloaders: that allows downloading content in various formats like xml, and yaml
     li User profiles: to allow viewing your favorite content creators
     li Advanced Search: to allow you to find exactly what you need
     li Variants: to allow others to take an idea and expand on it
-    li Collections: to allow collecting multiple items into a cohisive whole
+    li Collections: to allow collecting multiple items into a cohesive whole
 
   h2 The Newest, The Most Popular
 
-  fieldset.ContentList.col-md-6 
+  fieldset.ContentList.col-md-6
     legend Recent Uploads
-    
+
     for preview_htmlet in recent
       !{preview_htmlet}
 
-  fieldset.ContentList.col-md-6 
+  fieldset.ContentList.col-md-6
     legend Popular Content
-    
+
     for preview_htmlet in popular
       !{preview_htmlet}
